docs/mechanical/mechanical-scripting-interface/versions/2025.R2.SP00/api/ansys/mechanical/stubs/v251/Ansys/ACT/Automation/Mechanical/Results/ContactToolResults/index.md
# `ContactToolResults`

<a id="summary"></a>

## Summary

### Classes

| Name | Description |
|------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------|
| [`ContactFluidPressure`](ContactFluidPressure.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Results.ContactToolResults.ContactFluidPressure)          | Defines a ContactFluidPressure.    |
| [`ContactFrictionalStress`](ContactFrictionalStress.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Results.ContactToolResults.ContactFrictionalStress) | Defines a ContactFrictionalStress. |
| [`ContactGap`](ContactGap.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Results.ContactToolResults.ContactGap)                                        | Defines a ContactGap.              |
| [`ContactHeatFlux`](ContactHeatFlux.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Results.ContactToolResults.ContactHeatFlux)                         | Defines a ContactHeatFlux.         |
| [`ContactPenetration`](ContactPenetration.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Results.ContactToolResults.ContactPenetration)                | Defines a ContactPenetration.      |
| [`ContactPressure`](ContactPressure.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Results.ContactToolResults.ContactPressure)                         | Defines a ContactPressure.         |
| [`ContactSlidingDistance`](ContactSlidingDistance.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Results.ContactToolResults.ContactSlidingDistance)    | Defines a ContactSlidingDistance.  |
| [`ContactStatus`](ContactStatus.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Results.ContactToolResults.ContactStatus)                               | Defines a ContactStatus.           |
| [`ContactToolResult`](ContactToolResult.md#ansys.mechanical.stubs.v251.Ansys.ACT.Automation.Mechanical.Results.ContactToolResults.ContactToolResult)                   | Defines a ContactToolResult.       |

<a id="description"></a>

## Description

ContactToolResults module.

<!-- !! processed by numpydoc !! -->

